Refined mobile layout for better spacing and alignment

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body class="bg-[#f8f8f8]">
     <header class="">
-        <div class="flex justify-center items-center gap-2 shadow-sm p-4 mb-12">
+        <div class="flex justify-center items-center gap-2 shadow-sm p-4 mb-1">
             <img src="images/logo.png" alt="" class="w-12">
             <div>
                 <h1 class="text-2xl text-[#E71580]">Deshi <span class="font-semibold">Deals</span></h1>
@@ -39,16 +39,15 @@
 
         <!-- Banner -->
         <section class="mb-[10rem] bg-gradient-to-b from-[#ffffff] to-[#f6ddea]">
-            <div class="text-center">
-                <h2 class="font-bold text-[3rem]">Purchase TK 3700 or above & get</h2>
-                <span class="text-[2.5rem] block py-2 text-[#E71580] font-bold">30% off</span>
+            <div class="text-center pt-8">
+                <h2 class="font-bold text-[2.2rem] px-6 md:text-[3rem]">Purchase TK 3700 or above & get</h2>
+                <span class="text-[1.8rem] md:text-[2.5rem] block py-2 text-[#E71580] font-bold">30% off</span>
             </div>
             <div class="flex justify-center items-center gap-[3rem]">
-                <p class="text-3xl">Use Promo Code</p>
-                <button class="btn btn-secondary text-xl px-8 py-6">SELL200</button>
+                <p class="text-2xl md:text-3xl">Use Promo Code</p>
+                <button class="btn btn-secondary text-xl md:px-8 md:py-6">SELL200</button>
             </div>
-            <div class="relative flex items-center justify-center"><img class="-mb-[7.5rem]" src="images/hero-bg.png"
-                    alt=""></div>
+            <div class="relative flex items-center justify-center"><img class="-mb-[4.5rem] mb:-mb-[7.5rem]" src="images/hero-bg.png" alt=""></div>
         </section>
     </header>
     <main>
