Optimized image dimensions for better responsiveness and alignment

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                         <button class="btn join-item rounded-r-[1rem] bg-[#E71580] text-white">Apply</button>
                     </div>
                 </div>
-                <div class="card-box bg-white mt-6 p-6 rounded-md">
+                <div class="card-box bg-white mt-6 p-4 md:p-6 rounded-md">
                     <div class="flex justify-between items-center">
                         <h3 class="font-bold text-xl mb-4">Cart</h3>
                         <button id="Clear-btn"
